force-app/main/default/objects/Self_Hosted_License__c/Self_Hosted_License__c.object-meta.xml
<CustomObject>
    <description>A custom object to store the data from the self-hosted license server in the Salesforce environment.</description>
    <label>Self Hosted License</label>
    <nameField>
        <label>Self Hosted Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Self Hosted Licenses</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>