force-app/main/default/objects/Self_Hosted_License__c/fields/OnPrem_Id__c.field-meta.xml
<CustomField>
    <fullName>OnPrem_Id__c</fullName>
    <externalId>true</externalId>
    <label>OnPrem_Id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>