force-app/main/default/objects/Self_Hosted_License__c/fields/OnPrem_IdeCount__c.field-meta.xml
<CustomField>
    <fullName>OnPrem_IdeCount__c</fullName>
    <label>OnPrem IDE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>