force-app/main/default/objects/Self_Hosted_License__c/fields/OnPrem_Is_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>OnPrem_Is_Evaluation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OnPrem Is Evaluation</label>
    <type>Checkbox</type>
</CustomField>