force-app/main/default/objects/Self_Hosted_License__c/fields/OnPrem_LastUsage__c.field-meta.xml
<CustomField>
    <fullName>OnPrem_LastUsage__c</fullName>
    <label>OnPrem LastUsage</label>
    <type>DateTime</type>
</CustomField>