force-app/main/default/objects/Self_Hosted_License__c/fields/OnPrem_LicenseIde__c.field-meta.xml
<CustomField>
    <fullName>OnPrem_LicenseIde__c</fullName>
    <label>OnPrem License Ide</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>