force-app/main/default/objects/Self_Hosted_License__c/fields/OnPrem_LicenseLoc__c.field-meta.xml
<CustomField>
    <fullName>OnPrem_LicenseLoc__c</fullName>
    <label>OnPrem License Loc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>