force-app/main/default/objects/Self_Hosted_License__c/fields/OnPrem_LocAvg__c.field-meta.xml
<CustomField>
    <fullName>OnPrem_LocAvg__c</fullName>
    <label>OnPrem LOC Avg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>