force-app/main/default/objects/Self_Hosted_License__c/fields/OnPrem_Notes__c.field-meta.xml
<CustomField>
    <fullName>OnPrem_Notes__c</fullName>
    <label>OnPrem Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>