force-app/main/default/objects/Self_Hosted_License__c/fields/OnPrem_Valid_Till__c.field-meta.xml
<CustomField>
    <fullName>OnPrem_Valid_Till__c</fullName>
    <label>OnPrem Valid Till</label>
    <type>Date</type>
</CustomField>