force-app/main/default/objects/Self_Hosted_License__c/fields/Subscription_Code__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Code__c</fullName>
    <description>Subscription Code from the self hosted license server</description>
    <label>Subscription Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>