force-app/main/default/objects/Self_Hosted_License__c/listViews/Self_Hosted_Licenses_to_Filter.listView-meta.xml
<ListView>
    <fullName>Self_Hosted_Licenses_to_Filter</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>OnPrem_LastUsage__c</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>Email__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Email__c</field>
        <operation>contains</operation>
        <value>abbvie</value>
    </filters>
    <label>Self Hosted Licenses to Filter</label>
</ListView>